# soka

./: .gitignore  dagster.yaml  pyproject.toml  t.py  test.py  workspace.yaml
.telemetry/: id.yaml
init_sql/: create_appearance_coverage.sql  create_club_dim.sql  create_date_dim.sql  create_match_dim.sql  create_player_dim.sql  create_player_stats.sql
soka/: definition.py
soka/assets/: asset.py
soka/core/: config.py
soka/jobs/: job.py
soka/ops/: op.py
soka/resources/: resource.py
soka/sensors/: sensor.py
soka/utils/: util.py
soka_elt/: dbt_project.yml
soka_elt/models/: sources.yml
soka_elt/models/marts/: appearance_coverage.sql  club_dim.sql  match_dim.sql  player_dim.sql  player_stats.sql  schema.yml
soka_elt/models/staging/: stg_adjusted_substitutions.sql  stg_assisters.sql  stg_club_key.sql  stg_club_names.sql  stg_confederation_details.sql  stg_date_key.sql  stg_match_key.sql  stg_player_key.sql  stg_substitutions_in.sql
storage/1bdd5d22-3a52-4dde-8034-72078105b8b6/compute_logs/: qufnehpy.err
storage/f6de55d9-5d6f-46ad-9398-2f1e6ece08b3/compute_logs/: qbadlqiy.err
storage/f6de55d9-5d6f-46ad-9398-2f1e6ece08b3/latest_version/: result
