[tool.poetry]
name = "soka"
version = "0.1.0"
description = ""
authors = ["realonbebeto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.3.1"
dagster-postgres = "^0.19.1"
kaggle = "^1.5.13"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
dagit = "^1.3.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
