[project]
name = "soka"
version = "0.1.0"
description = "soka analytics"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "dagster-webserver>=1.9.6",
    "dagster>=1.9.6",
    "pandas>=2.2.3",
    "dagster-postgres>=0.25.6",
    "kaggle>=1.6.17",
    "pydantic-settings>=2.7.0",
    "dbt>=1.0.0.38.22",
    "dbt-postgres>=1.9.0",
]
